--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -4,6 +4,12 @@
     height: 32px;*/
 }
 
-mat-card-header div mat-icon {
-    padding-top: 12px;
+mat-card-subtitle {
+    text-align: left;
+}
+
+.widget-icon {
+    text-align: right;
+    margin-top: 10px;
+    margin-left: -8px;
 }
