--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,15 +1,15 @@
 <div>
     <mat-grid-list [cols]="calcGridCols()" [rowHeight]="calcGridRowHeight()">
-        <mat-grid-tile *ngFor="let tile of tiles" [colspan]="tile.cols" [rowspan]="tile.rows">
+        <mat-grid-tile *ngFor="let tile of tiles" [colspan]="getCols(tile)" [rowspan]="getRows(tile)">
             <mat-card style="width: 100%; height: 90%;">
                 <mat-card-header class="widget-header">
                     <mat-icon mat-card-avatar class="widget-icon">home</mat-icon>
-                    <mat-card-title>{{tile.widgetName}}</mat-card-title>
-                    <mat-card-subtitle>{{tile.widgetCategory}}</mat-card-subtitle>
+                    <mat-card-title>{{getName(tile)}}</mat-card-title>
+                    <mat-card-subtitle>{{getCategory(tile)}}</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
                     <p>
-                        <app-dashboard-widget-container [widget]="tile.widget"></app-dashboard-widget-container>
+                        <app-dashboard-widget-container [widget]="tile"></app-dashboard-widget-container>
                     </p>
                 </mat-card-content>
             </mat-card>
