--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -4,8 +4,8 @@
             <mat-card style="width: 100%; height: 90%;">
                 <mat-card-header class="widget-header">
                     <mat-icon mat-card-avatar class="widget-icon">home</mat-icon>
-                    <mat-card-title>{{getName(tile)}}</mat-card-title>
-                    <mat-card-subtitle>{{getCategory(tile)}}</mat-card-subtitle>
+                    <mat-card-title>{{tile.tileDetails.widgetCategory}}</mat-card-title>
+                    <mat-card-subtitle>{{tile.tileDetails.widgetCategory}}</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
                     <p>
