--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
         <mat-grid-tile *ngFor="let tile of tiles" [colspan]="getCols(tile)" [rowspan]="getRows(tile)">
             <mat-card style="width: 100%; height: 90%;">
                 <mat-card-header class="widget-header">
-                    <mat-icon mat-card-avatar class="widget-icon">home</mat-icon>
+                    <mat-icon mat-card-avatar class="widget-icon">{{tile.tileDetails.widgetIcon}}</mat-icon>
                     <mat-card-title>{{tile.tileDetails.widgetCategory}}</mat-card-title>
                     <mat-card-subtitle>{{tile.tileDetails.widgetCategory}}</mat-card-subtitle>
                 </mat-card-header>
