Added a basic notifications widget

--- a/src/app/components/dashboard/widgets/notifications/notifications-widget.component.html
+++ b/src/app/components/dashboard/widgets/notifications/notifications-widget.component.html
@@ -1,1 +1,33 @@
-<h1>Notification</h1>
+<div #notificationsList>
+    <mat-nav-list *ngIf="notifications.length > 0; else noNotifications">
+        <mat-list id="notifications-list">
+            <div *ngFor="let notification of notifications" class="noSelect">
+                <div *ngIf="notification.onClick; else notificationWithLink">
+                    <mat-list-item (click)="notification.onClick()">
+                        <mat-icon mat-list-icon>{{notification.icon}}</mat-icon>
+                        <h4 mat-line>{{notification.name}}</h4>
+                        <p mat-line> {{notification.description}} </p>
+                    </mat-list-item>
+                </div>
+                <ng-template #notificationWithLink>
+                    <mat-list-item (click)="navigate(notification.path)">
+                        <mat-icon mat-list-icon>{{notification.icon}}</mat-icon>
+                        <h4 mat-line>{{notification.name}}</h4>
+                        <p mat-line> {{notification.description}} </p>
+                        <button mat-icon-button>
+                            <mat-icon>open_in_new_tab</mat-icon>
+                        </button>
+                    </mat-list-item>
+                </ng-template>
+            </div>
+        </mat-list>
+    </mat-nav-list>
+
+    <ng-template #noNotifications>
+        <div id="centralImage" class="noSelect">
+            <img src="/assets/no_data.svg" alt="No new notifications have been found" />
+            <br />
+            <div>Anything new here</div>
+        </div>
+    </ng-template>
+</div>
