Showing notifications in the notification widget

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
             <mat-card style="width: 100%; height: 90%;">
                 <mat-card-header class="widget-header">
                     <mat-icon mat-card-avatar class="widget-icon">{{tile.tileDetails.widgetIcon}}</mat-icon>
-                    <mat-card-title>{{tile.tileDetails.widgetCategory}}</mat-card-title>
+                    <mat-card-title>{{tile.tileDetails.widgetName}}</mat-card-title>
                     <mat-card-subtitle>{{tile.tileDetails.widgetCategory}}</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
